learning neural network AI with tensorflow mnist dataset

--- a/neural network tensorflow.ipynb
+++ b/neural network tensorflow.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "2ab0e416-f930-4d17-a533-4f17c0c1115d",
    "metadata": {},
    "outputs": [
@@ -41,6 +41,7 @@
     }
    ],
    "source": [
+    "from tabulate import tabulate\n",
     "import tensorflow as tf\n",
     "print(\"TensorFlow version:\", tf.__version__)"
    ]
@@ -82,6 +83,16 @@
    "source": [
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
     "x_train, x_test = x_train / 255.0, x_test / 255.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bce23be7-4565-40ff-88c7-4218df93db3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(tabulate(x_train))"
    ]
   },
   {
@@ -354,8 +365,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a3e34da6-b76c-4dac-a8f4-8298bb5e8d8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "666e8288-656f-4157-8cd8-1950877d3217",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 9ebe521] learning neural network AI with tensorflow mnist dataset\n",
+      " 7 files changed, 21201 insertions(+), 18 deletions(-)\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled1-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/neural network tensorflow-checkpoint.ipynb\n",
+      " create mode 100644 Untitled.ipynb\n",
+      " create mode 100644 Untitled1.ipynb\n",
+      " create mode 100644 neural network tensorflow.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"learning neural network AI with tensorflow mnist dataset\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b679f7cf-5912-4990-a9ce-d8df59a09970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git branch -M main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "698ad358-23d8-4e48-8d9c-810daad4ebd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: remote origin already exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote add origin https://github.com/felista47/tensorflow-mnist-dataset.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5cc0785e-7043-4668-b0c9-7247823c52fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/felista47/artificial-intelligence-.git\n",
+      "   0f42b62..9ebe521  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push -u origin main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "906b3b1d-cba1-4d5f-98dd-b0df42b24bd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   neural network tensorflow.ipynb\n",
+      "\tmodified:   neuralNetcode.ipynb\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a4dcfe65-29d7-4f91-95e9-790e731b3e00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f809d84c-d669-445a-aaa0-b435f807b18c",
    "metadata": {},
    "outputs": [],
    "source": []
