--- a/neuralNetcode.ipynb
+++ b/neuralNetcode.ipynb
@@ -20337,12 +20337,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "5915d778-87d7-40c6-8cf7-1b82d24327e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "!git branch -M main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "430da112-7e8c-4105-963b-618548a53ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "origin\thttps://github.com/felista47/artificial-intelligence-.git (fetch)\n",
+      "origin\thttps://github.com/felista47/artificial-intelligence-.git (push)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote -v\n"
    ]
   },
   {
@@ -20357,7 +20376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "7353f91e-5bb5-4d4b-891b-62be91d5afed",
    "metadata": {},
    "outputs": [
