learning neural network AI with tensorflow mnist dataset

--- a/neural network tensorflow.ipynb
+++ b/neural network tensorflow.ipynb
@@ -86,16 +86,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bce23be7-4565-40ff-88c7-4218df93db3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(tabulate(x_train))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d4ab1f57-e8ca-4e89-bf53-5b2eeb4cc5ac",
    "metadata": {},
@@ -375,41 +365,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "666e8288-656f-4157-8cd8-1950877d3217",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main 9ebe521] learning neural network AI with tensorflow mnist dataset\n",
-      " 7 files changed, 21201 insertions(+), 18 deletions(-)\n",
-      " create mode 100644 .ipynb_checkpoints/Untitled-checkpoint.ipynb\n",
-      " create mode 100644 .ipynb_checkpoints/Untitled1-checkpoint.ipynb\n",
-      " create mode 100644 .ipynb_checkpoints/neural network tensorflow-checkpoint.ipynb\n",
-      " create mode 100644 Untitled.ipynb\n",
-      " create mode 100644 Untitled1.ipynb\n",
-      " create mode 100644 neural network tensorflow.ipynb\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git commit -m \"learning neural network AI with tensorflow mnist dataset\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "b679f7cf-5912-4990-a9ce-d8df59a09970",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git branch -M main"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 27,
    "id": "698ad358-23d8-4e48-8d9c-810daad4ebd5",
    "metadata": {},
@@ -428,7 +383,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
+   "id": "b679f7cf-5912-4990-a9ce-d8df59a09970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git branch -M main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a4dcfe65-29d7-4f91-95e9-790e731b3e00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "906b3b1d-cba1-4d5f-98dd-b0df42b24bd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes to be committed:\n",
+      "  (use \"git restore --staged <file>...\" to unstage)\n",
+      "\tmodified:   neural network tensorflow.ipynb\n",
+      "\tmodified:   neuralNetcode.ipynb\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "666e8288-656f-4157-8cd8-1950877d3217",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main adaf362] learning neural network AI with tensorflow mnist dataset\n",
+      " 2 files changed, 160 insertions(+), 4 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"learning neural network AI with tensorflow mnist dataset\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "5cc0785e-7043-4668-b0c9-7247823c52fb",
    "metadata": {},
    "outputs": [
@@ -444,49 +463,12 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/felista47/artificial-intelligence-.git\n",
-      "   0f42b62..9ebe521  main -> main\n"
+      "   9ebe521..adaf362  main -> main\n"
      ]
     }
    ],
    "source": [
     "!git push -u origin main"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "906b3b1d-cba1-4d5f-98dd-b0df42b24bd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch main\n",
-      "Your branch is up to date with 'origin/main'.\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\tmodified:   neural network tensorflow.ipynb\n",
-      "\tmodified:   neuralNetcode.ipynb\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "a4dcfe65-29d7-4f91-95e9-790e731b3e00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git add ."
    ]
   },
   {
